Fix: Correct image paths for deployment

--- a/Week.01/style.css
+++ b/Week.01/style.css
@@ -72,7 +72,7 @@ button {
 
 .card {
     background-color: #cfedfd;
-    background-image: url('/assets/img.webp');
+    background-image: url('assets/img.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
