--- a/week-3/style.css
+++ b/week-3/style.css
@@ -65,6 +65,17 @@ button {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
+}
+
+.btn_load-more {
+    position: absolute;
+    bottom: -5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
+    padding: 0.5rem 1rem;
+    background-color: #F1F1F1;
 }
 
 .promotions_container {
@@ -104,11 +115,15 @@ button {
 
 
 .cards_container {
-    display: grid;
+    display: none;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px 200px;
     gap: 20px;
     /* margin-top: 30px; */
+}
+
+.cards_container.is-visible {
+    display: grid;
 }
 
 .card {
