feat: 加入檢查最後一組cards_container是否為單一row的機制

--- a/week-3/style.css
+++ b/week-3/style.css
@@ -123,6 +123,10 @@ button {
     /* margin-top: 30px; */
 }
 
+.cards_container.isSingleRow {
+    grid-template-rows: 200px;
+}
+
 .cards_container.is-visible {
     display: grid;
 }
