--- a/week-3/style.css
+++ b/week-3/style.css
@@ -88,7 +88,7 @@ button {
 .promotions_container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 50px 50px;
+    grid-auto-rows: 50px;
     gap: 20px;
 }
 
@@ -131,13 +131,9 @@ button {
     display: none;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: 200px;
-    /* grid-template-rows: 200px 200px; */
     gap: 20px;
 }
 
-/* .cards_container.is-under-6 {
-    grid-template-rows: 200px;
-} */
 
 .cards_container.is-visible {
     display: grid;
@@ -258,12 +254,8 @@ button {
 
     .cards_container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        /* grid-template-rows: 200px 200px 200px; */
     }
 
-    /* .cards_container.is-under-9 {
-        grid-template-rows: 200px 200px;
-    } */
 
     .promotion-1 {
         grid-column: 1 / 2;
@@ -291,23 +283,22 @@ button {
 @media (max-width: 599px) {
 
     .promotions_container {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
+        grid-template-columns: 1fr;
+    }
+
+    .promotion-1,
+    .promotion-2,
+    .promotion-3 {
+        grid-column: 1 / 2;
     }
 
     .cards_container {
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .cards_container.is-visible {
-        display: flex;
+        grid-template-columns: 1fr;
+        grid-auto-rows: 270px;
     }
 
     .card {
-        aspect-ratio: 4/3;
-        height: auto;
+        grid-column: 1 / 2;
     }
 
     .nav_menu {
