feat: 完成week-4 task-2

--- a/week-4/templates/index.html
+++ b/week-4/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeHelp第一階段Week-4作業</title>
+    <title>WeHelp第一階段Week-4作業｜登入頁面</title>
     <link rel="stylesheet" href="../static/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
