fix: 修正命名重疊問題

--- a/week-4/templates/ohoh.html
+++ b/week-4/templates/ohoh.html
@@ -12,7 +12,7 @@
 <body>
     <main class="bg-gray-50 w-full h-[100dvh] flex justify-center items-center">
         <!-- 登入介面 -->
-        <div class="bg-white w-8/12 max-w-xl min-w-xs border border-slate-100">
+        <div class="bg-white w-8/12 max-w-xl min-w-xs border border-slate-100 flex flex-col pb-8">
             <!-- 標題 -->
             <h3 class="text-xl text-white bg-slate-800 text-center px-4 py-2">
                 失敗頁面
@@ -20,6 +20,7 @@
             <h5 class="text-center py-8">
                 {{msg}}
             </h5>
+            <a href="/" class="text-slate-600 underline inline-block text-center mx-auto">返回首頁</a>
         </div>
     </main>
 </body>
