feat: 完成week6 task1-4

--- a/week-6/templates/member.html
+++ b/week-6/templates/member.html
@@ -18,7 +18,7 @@
                 歡迎光臨，這是會員頁
             </h3>
             <div class="text-center py-8 flex flex-col justify-center items-center gap-4">
-                恭喜您，成功登入系統
+                {{member_name}}，成功登入系統
                 <a href="/logout"
                     class="w-auto px-6 py-2 bg-slate-400 hover:bg-slate-600 transition-colors duration-300 text-white rounded-md inline-block text-center">登出系統</a>
             </div>
