--- a/week-6/templates/member.html
+++ b/week-6/templates/member.html
@@ -11,17 +11,48 @@
 
 <body>
     <main class="bg-gray-50 w-full h-[100dvh] flex justify-center items-center">
-        <!-- 登入介面 -->
+        <!-- 介面 -->
         <div class="bg-white w-8/12 max-w-xl min-w-xs border border-slate-100">
             <!-- 標題 -->
-            <h3 class="text-xl text-white bg-slate-800 text-center px-4 py-2">
+            <h1 class="text-xl text-white bg-slate-800 text-center px-4 py-2">
                 歡迎光臨，這是會員頁
-            </h3>
+            </h1>
+            <!-- 登入訊息 -->
             <div class="text-center py-8 flex flex-col justify-center items-center gap-4">
                 {{member_name}}，成功登入系統
                 <a href="/logout"
                     class="w-auto px-6 py-2 bg-slate-400 hover:bg-slate-600 transition-colors duration-300 text-white rounded-md inline-block text-center">登出系統</a>
             </div>
+            <!-- 留言輸入區 -->
+            <form action="/createMessage" method="post"
+                class="flex flex-col justify-center items-center gap-4 px-8 pt-4 pb-12">
+                <h3 class="text-lg font-semibold text-center">快來留言吧</h3>
+                <div class="w-full flex justify-center items-start gap-2">
+                    <label class="text-nowrap h-10 flex items-center" for="content">內容</label>
+                    <div class="w-full">
+                        <input
+                            class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:border-slate-500"
+                            type="text" id="content" name="content" placeholder="請輸入留言" required
+                            oninvalid="this.setCustomValidity('請輸入留言內容')" oninput="this.setCustomValidity('')">
+                        <span class="hidden text-red-500 text-sm">請輸入姓名</span>
+                    </div>
+                </div>
+                <button type="submit"
+                    class="w-auto px-6 py-2 bg-slate-400 hover:bg-slate-600 transition-colors duration-300 text-white rounded-md inline-block text-center">
+                    送出
+                </button>
+            </form>
+            <!-- 留言列表 -->
+            <div class="border-t border-slate-200 px-8 pt-8 pb-12
+            flex flex-col items-start justify-center gap-4">
+                {% for member_message in member_messages %}
+                <p class="text-center px-4 py-2 rounded-md bg-slate-100">
+                    <span class="font-bold">{{member_message['name']}}：</span>
+                    {{member_message['content']}}
+                </p>
+                {% endfor %}
+            </div>
+
         </div>
     </main>
 </body>
